--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discover Amazing places in Japan</title>
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
@@ -19,7 +19,7 @@
                 <div class="header_logo">
                     <a href="/" class="header_logo_link">
 
-                        <img src="/img/svg/odigo-logo.svg" alt="Discover Amazing places in Japan" class="logo_header_pic">
+                        <img src="./img/svg/odigo-logo.svg" alt="Discover Amazing places in Japan" class="logo_header_pic">
                     </a>
                 </div>
                 <nav class="header_nav">
@@ -90,7 +90,7 @@
                 <div class="benefits_cards">
                     <div class="benefits_card">
                         <div class="benefits_card_pic">
-                            <img src="/img/svg/xram.svg" alt="Welcome to Odigo!">
+                            <img src="./img/svg/xram.svg" alt="Welcome to Odigo!">
                         </div>
                         <h3 class="benefits_card_titel">
                             Welcome to Odigo!
@@ -105,7 +105,7 @@
                     </div>
                     <div class="benefits_card">
                         <div class="benefits_card_pic">
-                            <img src="/img/svg/people_icon.svg" alt="Your Personal Japan Guide">
+                            <img src="./img/svg/people_icon.svg" alt="Your Personal Japan Guide">
                         </div>
                         <h3 class="benefits_card_titel">
                             Your Personal Japan Guide
@@ -120,7 +120,7 @@
                     </div>
                     <div class="benefits_card">
                         <div class="benefits_card_pic">
-                            <img src="/img/svg/bulding_icon.png" alt="Promoting Local Businesses">
+                            <img src="./img/svg/bulding_icon.png" alt="Promoting Local Businesses">
                         </div>
                         <h3 class="benefits_card_titel">
                             Promoting Local Businesses
@@ -150,14 +150,14 @@
                 <div class="places_cards">
 
                     <div class="places_card places_card_size_lg">
-                        <img src="/img/place_1.jpg" alt="Mount Fuji" class="places_card_pic places_card_pic_lg">
+                        <img src="./img/place_1.jpg" alt="Mount Fuji" class="places_card_pic places_card_pic_lg">
                         <h3 class="places_card_titel">
                             Mount Fuji
                         </h3>
                         <a href="#" class="place_card_link"></a>
                     </div>
                     <div class="places_card places_card_size_lg">
-                        <img src="/img/place_2.jpg" alt="Kyoto" class="places_card_pic  places_card_pic_lg">
+                        <img src="./img/place_2.jpg" alt="Kyoto" class="places_card_pic  places_card_pic_lg">
                         <h3 class="places_card_titel">
                             Kyoto
                         </h3>
@@ -165,21 +165,21 @@
                     </div>
 
                     <div class="places_card places_card_size_sm">
-                        <img src="/img/place_3.jpg" alt="Tokyo" class="places_card_pic  places_card_pic_sm">
+                        <img src="./img/place_3.jpg" alt="Tokyo" class="places_card_pic  places_card_pic_sm">
                         <h3 class="places_card_titel">
                             Tokyo
                         </h3>
                         <a href="#" class="place_card_link"></a>
                     </div>
                     <div class="places_card places_card_size_sm">
-                        <img src="/img/place_4.jpg" alt="Niigata" class="places_card_pic places_card_pic_sm">
+                        <img src="./img/place_4.jpg" alt="Niigata" class="places_card_pic places_card_pic_sm">
                         <h3 class="places_card_titel">
                             Niigata
                         </h3>
                         <a href="#" class="place_card_link"></a>
                     </div>
                     <div class="places_card places_card_size_sm">
-                        <img src="/img/place_5.jpg" alt="Sapporo" class="places_card_pic places_card_pic_sm">
+                        <img src="./img/place_5.jpg" alt="Sapporo" class="places_card_pic places_card_pic_sm">
                         <h3 class="places_card_titel">
                             Sapporo
                         </h3>
@@ -200,7 +200,7 @@
                 <div class="tours_wrap">
                     <div class="tours_tour tour">
                         <div class="tour_pic">
-                            <img src="/img/tour_1.jpg" alt="Prefecture in Focus: Tottori" class="tour_thumb">
+                            <img src="./img/tour_1.jpg" alt="Prefecture in Focus: Tottori" class="tour_thumb">
                         </div>
                         <div class="tour_info">
                             <h3 class="tour_titel">
@@ -227,7 +227,7 @@
                             </a>
                         </div>
                         <div class="tour_pic">
-                            <img src="/img/tour_2.jpg" alt="Featured Neighborhood: Kyoto’s Arashiyama" class="tour_thumb">
+                            <img src="./img/tour_2.jpg" alt="Featured Neighborhood: Kyoto’s Arashiyama" class="tour_thumb">
                         </div>
                     </div>
 
@@ -477,7 +477,7 @@
             </div>
         </div>
     </footer>
-    <script src="/js/main.js"></script>
+    <script src="./js/main.js"></script>
 
 </body>
 
